Fixed issue that caused other parts of website to display wrong font selections.

--- a/sass/layout/pages/_adventure-game.scss
+++ b/sass/layout/pages/_adventure-game.scss
@@ -1,14 +1,14 @@
-body {
+.text-game {
 	font-family: "Merriweather";
 	font-size: 16px;
-}
 
-h1, h2, h3, h4 {
-	font-family: "Cinzel";
-}
+	h1, h2, h3, h4 {
+		font-family: "Cinzel";
+	}
 
-h3 {
-	text-align: center;
+	h3 {
+		text-align: center;
+	}
 }
 
 .main-content {
